# putting-scene-system-design-architecture

./: .gitignore  CMakeLists.txt  README.md
config/: api_gateway.yaml
docs/architecture/: block_architecture.md
docs/database/: schema.sql
include/models/: Venue.hpp
include/services/: EventService.hpp
src/cache/: CacheManager.hpp
src/services/: EventServiceImpl.cpp
